deleteAll method is now moved from holiday repositoy to AbstractRepositoryManager